Revert "Revert "swagger updated""
This reverts commit 9ed74328051ee2386cd6ec6edc2ce74096f91a70.
